tests/snapshots/tbir__wait_until_quiesce_unsupported.snap
---
source: tests/tbir.rs
expression: msg
---
TB-IR lowering does not support testbench field `prod` of component type `Producer` yet; re-run with `--codegen v1`
