tests/snapshots/tbir__watchdog_quiesce_dump_ir.snap
---
source: tests/tbir.rs
expression: "format!(\"{prog}\")"
---
tb-ir program
  testbench tb0 WatchdogQuiesceTb { dut: Top } component prod=c0
  test WatchdogQuiesceTest tb=tb0 run=fn2 check=- clock=clk@10000ps(SysDomain)
  record r0 TinyTxn
    tag : uint<8>
  component c0 Producer (agent)
    field in_ev : out event<TinyTxn>
    field seen : uint<32> = 0
    watchdog period 500 max_idle 1000 = fn1

fn fn0 comp_on_0 [kind=ComponentMethod(c0)]
  params:
    t : record(r0)
  locals:
    %0 t : record(r0)
  entry = b0

  b0:
    ComponentFieldWrite(self.seen, (self.seen + 1))
    -> Return

fn fn1 comp_watchdog_1 [kind=ComponentMethod(c0)]
  entry = b0

  b0:
    Log(info, "[wdog %lld] producer seen=%lld", cycle_count, self.seen)
    -> Return

fn fn2 run_WatchdogQuiesceTest [kind=Run, owner=tb0]
  locals:
    %0 i : unknown
    %1 t : record(r0)
    %2 __t0 : unknown
  entry = b0

  b0:
    DutWrite(dut.rst, 1)
    DutWrite(dut.en, 0)
    -> WaitCycles(2, b1)

  b1:
    DutWrite(dut.rst, 0)
    -> WaitCycles(1, b2)

  b2:
    Assign(%i, 0)
    -> Jump(b3)

  b3:
    -> Branch((%i <= 19), b4, b6)

  b4:
    RecordInit(%t, r0)
    RecordFieldWrite(%t.tag, %i)
    ComponentEmit(prod.in_ev, [%t])
    -> WaitCycles(3, b7)

  b5:
    Assign(%i, (%i + 1))
    -> Jump(b3)

  b6:
    Assign(%__t0, 200)
    -> WaitUntilTimeout { (prod.seen == 20) [single], cycles: %__t0, fire: b8, timeout: b9 }

  b7:
    -> Jump(b5)

  b8:
    Log(info, "PASS: watchdog watched %lld emits without tripping", prod.seen)
    -> Return

  b9:
    FailDiag { "agent did not finish all 20 emits" }
    FailDiag { unless: (prod.seen == 20), "  not yet true: _tb.prod.seen == 20" }
    -> Jump(b8)
